--- a/modules/core/client/css/headernav.css
+++ b/modules/core/client/css/headernav.css
@@ -2,20 +2,21 @@
  * Navbar
  */
 
-.header nav.top{
-  background-color: #fff;
-  border-bottom: 1px solid #dddddd;
+.header nav.top {
+  border-bottom: 1px solid #ddd;
+  height: 50px !important;
+  line-height: 50px !important;
   margin-bottom: 20px;
   padding: 0 1.25rem;
-  position:fixed;
-  right:0;
+  position: fixed;
+  right: 0;
   width: 100%;
   z-index: 48;
 }
 
-.header nav.top .brand-logo a, .header nav.top .brand-logo span {
-  color: #4c4e54;
-  font-size: 27px;
+.header nav.top .topTitle a,
+.header nav.top .topTitle span {
+  font-size: 24px;
 }
 
 .header nav.top ul {
@@ -25,7 +26,7 @@
 }
 
 .header nav.top ul.right {
-  float:right;
+  float: right;
 }
 
 .header nav.top ul li {
@@ -38,7 +39,6 @@
 }
 
 .header nav.top ul li a {
-  color: #2c3e50;
   cursor: pointer;
   display: block;
   font-size: 1rem;
@@ -48,37 +48,5 @@
 
 .header nav.top ul a:hover {
   background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.1);
-}
-
-/*
- * Suggest
- */
-
-.header .input-field {
-  position : static;
-}
-
-.header nav.top .search-input {
-  border-bottom: 1px solid #2c3e50;
-  display: inline-block;
-  font-size: 100%;
-  font-weight: normal;
-  line-height: 30px;
-  margin: 6px 0 0 10px;
-  padding: 0 5px 0 5px;
-  width: 200px;
-}
-
-.header .ac-container {
-  position: absolute;
-  top:41px !important;
-}
-
-.header .ac-container .ac-menu .ac-menu-item {
-  background: #fff;
-  border-bottom: 1px dotted #ddd;
-  color: #2c3e50;
-  height: 50px;
-  width: 300px;
+  background-color: rgba(0,0,0,.1);
 }
