--- a/modules/users/client/views/admin/view-user.client.view.html
+++ b/modules/users/client/views/admin/view-user.client.view.html
@@ -2,7 +2,7 @@
   <md-content>
     <md-toolbar class="md-hue-2">
       <div class="md-toolbar-tools">
-        <h2>Article</h2>
+        <h2>User</h2>
         <span flex></span>
         <md-button class="md-icon-button" ui-sref="admin.user-edit({userId: vm.user._id})" aria-label="Favorite">
           <i class="fa fa-pencil fa-2x"></i>
