--- a/modules/users/client/views/password/forgot-password.client.view.html
+++ b/modules/users/client/views/password/forgot-password.client.view.html
@@ -3,7 +3,7 @@
 
   <md-input-container class="md-icon-float md-block" show-errors>
     <md-icon><i class="fa fa-user"></i></md-icon>
-    <input ng-model="vm.credentials.username" type="text" placeholder="Username" id="username" name="username" lowercase required>
+    <input ng-model="vm.credentials.username" type="text" placeholder="Username" id="username" name="username" lowercase required autofocus>
     <div ng-messages="vm.forgotPasswordForm.username.$error" role="alert">
       <p ng-message="required">Enter a username.</p>
     </div>
