--- a/modules/users/client/views/password/reset-password.client.view.html
+++ b/modules/users/client/views/password/reset-password.client.view.html
@@ -14,7 +14,7 @@
   </md-input-container>
   <md-input-container md-no-float class="md-block" show-errors>
     <md-icon><i class="fa fa-lock"></i></md-icon>
-    <input ng-model="vm.passwordDetails.verifyPassword" type="text" placeholder="Verify Password" id="verifyPassword" name="verifyPassword" password-verify="vm.passwordDetails.newPassword" required>
+    <input ng-model="vm.passwordDetails.verifyPassword" type="text" placeholder="Verify Password" id="verifyPassword" name="verifyPassword" password-verify="vm.passwordDetails.newPassword" required autofocus>
     <div ng-messages="vm.resetPasswordForm.verifyPassword.$error" role="alert">
       <p ng-message="required">Enter the password again to verify.</p>
       <p ng-show="vm.resetPasswordForm.verifyPassword.$error.passwordVerify">Passwords do not match.</p>
