--- a/modules/users/client/views/settings/change-password.client.view.html
+++ b/modules/users/client/views/settings/change-password.client.view.html
@@ -2,7 +2,7 @@
 
   <md-input-container class="md-icon-float md-block" show-errors>
     <md-icon><i class="fa fa-lock"></i></md-icon>
-    <input ng-model="vm.passwordDetails.currentPassword" type="password" placeholder="Current Password" id="currentPassword" name="currentPassword" required />
+    <input ng-model="vm.passwordDetails.currentPassword" type="password" placeholder="Current Password" id="currentPassword" name="currentPassword" required autofocus />
     <div ng-messages="vm.passwordForm.currentPassword.$error" role="alert">
       <p ng-message="required" class="error-text">Your current password is required.</</p>
     </div>
