--- a/modules/core/client/views/403.client.view.html
+++ b/modules/core/client/views/403.client.view.html
@@ -1,4 +1,8 @@
-<div class="lost">
-  <h1 class="center-align"><b>Forbidden</b></h1>
-  <h3 class="center-align"><i class="fa fa-exclamation"></i> You are not authorized to access this resource</h3>
+<div class="page-header">
+  <h1>Forbidden</h1>
+</div>
+<div class="alert alert-danger" role="alert">
+  <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+  <span class="sr-only">Error:</span>
+  You are not authorized to access this resource
 </div>
