--- a/modules/core/client/views/404.client.view.html
+++ b/modules/core/client/views/404.client.view.html
@@ -1,8 +1,8 @@
-<div class="lost">
-  <h1 class="center-align"><b>404</b></h1>
-  <h3 class="center-align">
-    <i class="fa fa-exclamation"></i>
-    <span ng-if="vm.errorMessage" ng-bind="vm.errorMessage"></span>
-    <span ng-if="!vm.errorMessage">Page Not Found</span>
-  </h3>
+<div class="page-header">
+  <h1>Page Not Found</h1>
+</div>
+<div class="alert alert-danger" role="alert">
+  <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+  <span ng-if="vm.errorMessage" ng-bind="vm.errorMessage"></span>
+  <span ng-if="!vm.errorMessage">Page Not Found</span>
 </div>
