--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,21 +1,14 @@
 <section class="home">
-  <div layout="row" layout-align="center">
-    <div flex="50">
-      <div class="back-logo">
-        <!--{{bind-attr class="hasQuery:while-search :back-logo"}} -->
-        <center ng-if="vm.logo"><img src="modules/raws/client/img/brand/logo-soos-big.png" width="300px"></img>
-        </center>
-        <center ng-if="!vm.logo"><img src="modules/raws/client/img/brand/logo-soos-big2.png" width="300px"></img>
-        </center>
-        <!-- {{bind-attr class="hasQuery:while-search :back-logo :hide-on-small-only"}} -->
+  <md-content>
+    <div layout="row" layout-align="center">
+      <div flex="50">
+        <div class="back-logo">
+          <center ng-if="vm.logo"><img src="/modules/raws/client/img/brand/logo-soos-big.png" width="300px"></img></center>
+          <center ng-if="!vm.logo"><img src="/modules/raws/client/img/brand/logo-soos-big2.png" width="300px"></img></center>
+          <p>Soos is an open source web tool developed at the Data Lab based on the tool RAW to create custom vector-based visualizations on top of the amazing d3.js library. Primarily conceived as a tool for designers and vis geeks, Soos aims at providing a missing link between spreadsheet applications (e.g. Microsoft Excel, Apple Numbers, OpenRefine) and vector graphics editors (e.g. Adobe Illustrator, Inkscape, ...).</p>
+          <center><a href="https://github.com/weareopensource/roMEANet-SOOS"><i class="fa fa-2x fa-github"></i></a></center>
+        </div>
       </div>
     </div>
-  </div>
-  <div data-surprise="vm.showSomething" data-surprise-trigger="37,38,39,40"></div>
-  <div class="base md-padding">
-    <p>Soos is an open source web tool developed at the Data Lab based on the tool RAW to create custom vector-based visualizations on top of the amazing d3.js library. Primarily conceived as a tool for designers and vis geeks, Soos aims at providing a missing
-      link between spreadsheet applications (e.g. Microsoft Excel, Apple Numbers, OpenRefine) and vector graphics editors (e.g. Adobe Illustrator, Inkscape, ...).</p>
-
-      <center><a href="https://github.com/weareopensource/roMEANet-SOOS"><i class="fa fa-2x fa-github"></i></a></center>
-  </div>
+  </md-content>
 </section>
