--- a/modules/core/client/views/sidenav.client.view.html
+++ b/modules/core/client/views/sidenav.client.view.html
@@ -1,8 +1,8 @@
-<div class="sidenav" ng-controller="SidenavController as vm">
+<div class="sidenav" ng-controller="SidenavController as vm"  md-colors="{background: 'background-SIDENAVLIGHT'}">
   <div class="sidebar-nav">
-    <div class="head">
+    <div class="head" md-colors="{background: 'background-SIDENAVDARK'}">
       <a ui-sref="home">
-        <img src="modules/core/client/img/brand/logo-white.png" width="50px" class="logo"></img>
+        <img src="/modules/raws/client/img/brand/logo-soos-big.png" class="logo"></img>
         <span style="font-size:28px; color:#fff;">roMEANet</span>
       </a>
     </div>
@@ -10,7 +10,7 @@
       <ul ng-if="vm.sideNav.shouldRender(vm.authentication.user);">
         <li ng-repeat="item in vm.sideNav.items | orderBy: 'position'" ng-if="item.shouldRenderItem(vm.authentication.user);" ng-switch="item.view" ng-class="{ drop: item.type === 'dropdown' }" drop="item.type">
           <!-- if Dropdown  -->
-          <a ng-switch-when="dropdown" class='dropdown-button' data-activates="{{item.title}}" dropdown>{{::item.title}}&nbsp;<i class="material-icons right">arrow_drop_down</i></a>
+          <!--<a ng-switch-when="dropdown" class='dropdown-button' data-activates="{{item.title}}" dropdown>{{::item.title}}&nbsp;<i class="material-icons right">arrow_drop_down</i></a>-->
           <!-- <ul ng-switch-when="dropdown" id="{{item.title}}" class='dropdown-content'>
             <li ng-repeat="subitem in item.items | orderBy: 'position'" ng-if="subitem.shouldRender(authentication.user);" ui-sref-active="active">
               <a ui-sref="{{subitem.state}}" ng-bind="subitem.title"></a>
@@ -32,10 +32,10 @@
         </a>
       </div>
     </div>
-    <div class="foot">
-      <a class="dropdown-toggle center-align" ng-click="setSideblock()">
-        <i ng-if="sideblock" class="fa fa-angle-left fa-fw"></i>
-        <i ng-if="!sideblock" class="fa fa-angle-right fa-fw"></i>
+    <div class="foot" md-colors="{background: 'background-SIDENAVDARK'}">
+      <a class="dropdown-toggle center-align" ng-click="vm.setSideblock()">
+        <i ng-if="vm.sideblock" class="fa fa-angle-left fa-fw"></i>
+        <i ng-if="!vm.sideblock" class="fa fa-angle-right fa-fw"></i>
       </a>
     </div>
   </div>
