--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
-  <title page-title></title>
+
+  <title kind="page" page-title></title>
   <meta name="description" content="{{description}}">
   <meta name="fragment" content="!">
 
@@ -22,9 +23,10 @@
   <meta property="og:type" content="website">
 
   <!-- Twitter META -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="{{twitterUsername}}">
   <meta name="twitter:title" content="{{title}}">
   <meta name="twitter:description" content="{{description}}">
-  <meta name="twitter:url" content="{{url}}">
   <meta name="twitter:image" content="{{logo}}">
 
   <!-- Fav Icon -->
