--- a/modules/users/client/views/settings/change-profile-picture.client.view.html
+++ b/modules/users/client/views/settings/change-profile-picture.client.view.html
@@ -1,23 +1,18 @@
 <form flex="100" class="base">
-  <div ng-show="vm.fileSelected" class="center-align form-group">
-    <p>Crop your picture then press upload below:</p>
-    <div ngf-drop ng-model="picFile" ngf-pattern="image/*" class="cropArea">
-      <img-crop image="picFile | ngfDataUrl" result-image="croppedDataUrl" ng-init="croppedDataUrl=''"></img-crop>
-    </div>
-  </div>
   <div class="center-align">
-    <img ng-src="{{vm.fileSelected ? croppedDataUrl : '/' + vm.user.profileImageURL}}" alt="{{vm.user.displayName}}" class="user-profile-picture" ngf-drop>
-    <img ng-src="{{vm.fileSelected ? croppedDataUrl : '/' + vm.user.profileImageURL}}" alt="{{vm.user.displayName}}" class="user-profile-picture circle" ngf-drop>
+    <img ngf-src="vm.fileSelected ? picFile : '/' + vm.user.profileImageURL" alt="{{vm.user.displayName}}" class="user-profile-picture" ngf-drop>
+    <img ngf-src="vm.fileSelected ? picFile : '/' + vm.user.profileImageURL" alt="{{vm.user.displayName}}" class="user-profile-picture circle" ngf-drop>
   </div>
-
+  <div ng-show="vm.loading" class="form-group center-align">
+    <img ng-src="/modules/core/client/img/loaders/loader.gif" height="50" width="50" alt="Loading image...">
+  </div>
   <div ng-show="!vm.fileSelected" class="center-align">
-    <md-button ngf-select="vm.fileSelected = true; vm.success = null" ng-model="picFile" accept="image/*" class="md-raised md-primary">Select Picture</md-button>
+    <md-button class="md-raised md-primary" ngf-select="(vm.fileSelected = true) && (vm.loading = false)" ng-model="picFile" accept="image/*" ngf-before-model-change="vm.loading = true" ngf-resize="{width: 400}" ngf-resize-if="$width > 400 || $height > 400">Select Picture</md-button>
   </div>
   <div ng-show="vm.fileSelected" class="center-align">
-    <md-button ng-click="vm.upload(croppedDataUrl, picFile.name)" class="md-raised md-primary">Upload</md-button>
-    <md-button ng-click="vm.fileSelected = false" class="md-raised md-primary">Cancel</md-button>
+    <md-button class="md-raised md-primary" ng-click="vm.upload(picFile)">Upload</md-button>
+    <md-button class="md-raised md-primary" ng-click="vm.fileSelected = false">Cancel</md-button>
   </div>
-
   <div ng-show="vm.fileSelected">
     <span layout="row" layout-align="center center">{{vm.progress}}% Complete</span>
     <div layout="row" layout-align="center center">
@@ -25,7 +20,6 @@
     </div>
     <br />
   </div>
-
   <div ng-show="vm.success" class="center-align text-success">
     <strong>Profile Picture Changed Successfully</strong>
   </div>
