--- a/modules/users/client/views/settings/settings.client.view.html
+++ b/modules/users/client/views/settings/settings.client.view.html
@@ -2,11 +2,11 @@
   <md-content>
     <div layout="row" class="row" layout-align="center">
       <div flex="100" class="center-align">
-        <md-nav-bar md-selected-nav-item="currentNavItem" nav-bar-aria-label="navigation links">
-          <md-nav-item md-nav-sref="settings.profile" name="profile">Edit Profile</md-nav-item>
-          <md-nav-item md-nav-sref="settings.picture" name="picture">Change Profile Picture</md-nav-item>
-          <md-nav-item  ng-show="vm.user.provider === 'local'" md-nav-sref="settings.password" name="password">Change Password</md-nav-item>
-          <md-nav-item md-nav-sref="settings.accounts" name="accounts">Manage Social Accounts</md-nav-item>
+        <md-nav-bar md-selected-nav-item="vm.currentNavItem" nav-bar-aria-label="navigation links">
+          <md-nav-item md-nav-sref="settings.profile" name="profile" value="profile">Edit Profile</md-nav-item>
+          <md-nav-item md-nav-sref="settings.picture" name="picture" value="picture">Change Profile Picture</md-nav-item>
+          <md-nav-item  ng-show="vm.user.provider === 'local'" md-nav-sref="settings.password" name="password" value="password">Change Password</md-nav-item>
+          <md-nav-item md-nav-sref="settings.accounts" name="accounts" value="accounts">Manage Social Accounts</md-nav-item>
         </md-nav-bar>
       </div>
     </div>
