--- a/modules/etls/client/views/view-etl.client.view.html
+++ b/modules/etls/client/views/view-etl.client.view.html
@@ -68,9 +68,10 @@
       </md-tab>
       <md-tab label="Dashboard">
         <md-content>
-          <highchart id="chart1" config="vm.chartConfig" class="span10"></highchart>
+          <md-button class="md-raised md-primary" ng-click="vm.genChart()">Generate Chart</md-button>
 
-          <md-button class="md-raised md-primary" ng-click="vm.testThumbnailGen('chart1')">Save thumbnail</md-button>
+          <build-chart ng-if="vm.gen" chart-id="chart1" chart-config="vm.chartConfig"></build-chart>
+
           <img style="width: 150px;height: 150px; " id="binaryImage"/>
 
         </md-content>
