--- a/modules/etls/client/css/view-etls.client.view.css
+++ b/modules/etls/client/css/view-etls.client.view.css
@@ -89,10 +89,11 @@
 .elts .item {
 	padding: 10px;
 	cursor: pointer;
-	border: 1px solid #ccc;
-	border-radius: 3px;
-	margin-bottom: 10px;
+	margin: 0	;
 	background: #fff;
+}
+.elts .item:hover {
+background-color: #d2d2d2;
 }
 
 .elts .groups .title {
@@ -119,3 +120,5 @@ ul[dnd-list]>li {
 .elts  md-content {
     background-color: #fff;
 }
+
+
