--- a/modules/core/client/views/sidenav.client.view.html
+++ b/modules/core/client/views/sidenav.client.view.html
@@ -8,8 +8,8 @@
     <div class="sidebar-nav">
       <div class="head" md-colors="{background: 'background-SIDENAVDARK'}">
         <a ui-sref="home" ng-click="vm.menuClick()">
-        <img src="/modules/core/client/img/brand/logo-romeanet-light-small.png" width="36px" class="logo"></img>
-        <span style="font-size:28px; color:#fff;">roMEANet</span>
+          <img src="/modules/raws/client/img/brand/logo-soos-big.png" width="36px" class="logo"></img>
+        <span style="font-size:28px; color:#fff;">S00S</span>
         </a>
       </div>
       <div class="sidebar">
