--- a/modules/raws/client/views/view-raw.client.view.html
+++ b/modules/raws/client/views/view-raw.client.view.html
@@ -2,7 +2,6 @@
 
   <section class="">
     <div class="container">
-
       <div layout="row" flex-xs="100" flex-sm="100" flex="33">
         <p>Insert your data or choose one of our samples</p>
         <md-menu>
@@ -11,8 +10,8 @@
             <md-tooltip md-direction="right">Samples</md-tooltip>
           </md-button>
           <md-menu-content width="6">
-            <md-menu-item ng-repeat="s in vm.samples">
-              <md-button ng-click="vm.selectSample(s)">
+            <md-menu-item ng-repeat="s in samples">
+              <md-button ng-click="selectSample(s)">
                 <md-icon md-menu-align-target class="material-icons">text_fields</md-icon>
                 {{ s.title }}
               </md-button>
@@ -21,9 +20,7 @@
         </md-menu>
       </div>
 
-
       <md-content>
-
         <md-tabs md-dynamic-height md-center-tabs md-no-ink md-no-ink-bar md-border-bottom layout-align="center center">
           <md-tab>
             <md-tab-label>
@@ -31,107 +28,73 @@
               <md-tooltip md-direction="bottom">Parse</md-tooltip>
             </md-tab-label>
             <md-tab-body>
-              <ui-codemirror ui-codemirror-opts="vm.codeMirrorOptions" ng-model="vm.text"></ui-codemirror>
+              <ui-codemirror ui-codemirror-opts="codeMirrorOptions" ng-model="text"></ui-codemirror>
             </md-tab-body>
           </md-tab>
-          <md-tab ng-if="vm.data.length">
+          <md-tab ng-if="data.length">
             <md-tab-label>
               <md-icon md-font-set="material-icons"> <i class="material-icons">apps</i> </md-icon>
               <md-tooltip md-direction="bottom">Table</md-tooltip>
-
             </md-tab-label>
-
             <md-tab-body>
-              <hot-table hot-id="rawTable" datarows="vm.data" settings="vm.tableSettings">
-
-                <hot-column ng-repeat="column in vm.metadata" data="{{column.key}}" title="column.key"></hot-column>
+              <hot-table hot-id="rawTable" datarows="data" settings="tableSettings">
+                <hot-column ng-repeat="column in metadata" data="{{column.key}}" title="column.key"></hot-column>
               </hot-table>
-
             </md-tab-body>
-
-
-
           </md-tab>
         </md-tabs>
-
       </md-content>
-
-
-
-      <!--<div ng-if="!vm.loading && !vm.data.length && !vm.error" class="alert"><i class="fa fa-hand-o-right breath-right"></i> Not sure how it works? FAQs</div> TODO FAQ -->
-      <div ng-if="!vm.loading && !vm.error && vm.data.length" class="alert alert-success"><i class="fa fa-thumbs-up breath-right"></i><strong>{{vm.data.length}}</strong> records in your data have been successfully parsed!</div>
-      <div ng-if="!vm.loading && vm.error" class="alert alert-warning"><i class="fa fa-thumbs-down breath-right"></i><strong>Whoops!</strong> Please, check line {{vm.error+1}}</div>
-      <div ng-if="vm.loading" class="alert"><i class="fa breath-right fa-refresh fa-spin"></i>Loading your data. Please wait.</div>
+      <!--<div ng-if="!loading && !data.length && !error" class="alert"><i class="fa fa-hand-o-right breath-right"></i> Not sure how it works? FAQs</div> TODO FAQ -->
+      <div ng-if="!loading && !error && data.length" class="alert alert-success"><i class="fa fa-thumbs-up breath-right"></i><strong>{{data.length}}</strong> records in your data have been successfully parsed!</div>
+      <div ng-if="!loading && error" class="alert alert-warning"><i class="fa fa-thumbs-down breath-right"></i><strong>Whoops!</strong> Please, check line {{error+1}}</div>
+      <div ng-if="loading" class="alert"><i class="fa breath-right fa-refresh fa-spin"></i>Loading your data. Please wait.</div>
     </div>
-
-
   </section>
 
-  <section ng-if="vm.error">
-
+  <section ng-if="error">
     <div class="container">
       <h2 class="md-headline">Ouch. It seems like RAW encountered some problems while parsing your data. Please, be sure everything is ok with your data. Often this is due to some missing delimiters. If you want to use a <a href="http://en.wikipedia.org/wiki/Delimiter">delimiter char</a> as string literal, please include it in double quotes. See our <a href="https://github.com/densitydesign/raw/wiki/FAQs#raw-says-there-is-something-wrong-with-my-data">FAQs</a> for more information.</h2>
     </div>
-
   </section>
 
 
-  <section class="" ng-if="!vm.error && vm.data.length">
+  <section class="" ng-if="!error && data.length  && parsed">
 
     <div class="container">
-
       <div>
-
         <h3 id="layout">
 						Choose a Chart
 					</h3>
-
-
         <div layout="row">
 
           <div flex="30">
             <div class="chart-description">
-              <h4>{{vm.chart.title()}}</h4>
+              <h4>{{chart.title()}}</h4>
               <hr>
-              <p class="light" ng-bind-html="vm.chart.description()"></p>
-              <p class="light" data-ng-show="!vm.chart.description()">No description given</p>
+              <p class="light" ng-bind-html="chart.description()"></p>
+              <p class="light" data-ng-show="!chart.description()">No description given</p>
             </div>
           </div>
 
           <div flex="70">
-
-            <div ng-repeat="category in vm.categories">
-              <h4 class="text-muted">{{category}}</h4>
-              <div layout="row" layout-margin group every="3" watch="vm.charts">
-                <div flex="30" ng-repeat="c in filtered = (vm.charts | categoryFilter:category) track by $index">
-                  <div ng-class="{selected: c == vm.chart}" class="layout" ng-click="vm.selectChart(c)">
-                    <div class="layout-thumb" ng-style="{'background-image':'url(' + c.thumbnail() + ')'}">
-                    </div>
-                    <p class="layout-inner" layout-align="center center">
-                      <span class="layout-title">{{c.title()}}</span>
-                    </p>
+            <div class='md-padding posters' layout="row" layout-wrap layout-align="space-around">
+              <md-card class="item"ng-class="{selected: c == chart}" ng-click="selectChart(c)" ng-repeat="c in charts">
+                <div class="md-card-image image" ng-style="{'background-image':'url(' + c.thumbnail() + ')'}"></div>
+                <md-card-content>
+                  <div class="chart-description">
+                    <span>{{c.title()}}</span><br />
+                    <small>{{c.category() || 'Other'}}</small>
                   </div>
-                </div>
-
-              </div>
-              <!-- end of group -->
-
+                </md-card-content>
+              </md-card>
             </div>
-
-
-
           </div>
-
         </div>
-
-
       </div>
-
     </div>
-
   </section>
 
-  <section class="dark" ng-if="!vm.error && vm.data.length">
+  <section class="dark" ng-if="!error && data.length">
 
     <div class="container">
 
@@ -139,7 +102,7 @@
 
         <div>
           <h3>Map your Dimensions
-							<a ng-click="vm.model.clear()" class="pull-right light"><i class="fa fa-trash-o"></i></a>
+							<a ng-click="model.clear()" class="pull-right light"><i class="fa fa-trash-o"></i></a>
                                     <md-tooltip md-direction="right">Samples</md-tooltip>
 
 							<span class="clearfix"></span>
@@ -152,7 +115,7 @@
           <div flex="20">
             <div draggable>
               <ul class="list-unstyled dimensions-list">
-                <li class="dimension" data-dimension="{{dimension}}" ng-repeat="dimension in vm.metadata track by $index">
+                <li class="dimension" data-dimension="{{dimension}}" ng-repeat="dimension in metadata track by $index">
                   <span class="dimension-key">{{ dimension.key }}</span>
                   <span class="dimension-type">{{dimension.type}}</span>
                   <span class="dimension-icon pull-right"><i class="fa fa-bars"></i></span>
@@ -164,9 +127,9 @@
 
           <div flex="80">
             <div class="sticky">
-              <div layout="row" layout-margin group every="3" watch="vm.model">
+              <div layout="row" layout-margin group every="3" watch="model">
 
-                <div flex="30" class="dimensions-wrapper" ng-repeat="dimension in vm.model.dimensions().values() track by $index" ng-init="open=false">
+                <div flex="30" class="dimensions-wrapper" ng-repeat="dimension in model.dimensions().values() track by $index" ng-init="open=false">
 
                   <div class="dimensions-model">
 
@@ -176,7 +139,7 @@
                         <md-tooltip md-direction="bottom">
                           You can drag only one dimension here
                         </md-tooltip>
-                        <md-icon md-font-icon="fa fa-tag" >
+                        <md-icon md-font-icon="fa fa-tag">
                         </md-icon>
                       </md-button>
 
@@ -184,7 +147,7 @@
                         <md-tooltip md-direction="right">
                           You can drag more than one dimension here
                         </md-tooltip>
-                        <md-icon md-font-icon="fa fa-tags" >
+                        <md-icon md-font-icon="fa fa-tags">
                         </md-icon>
                       </md-button>
                     </div>
@@ -223,7 +186,7 @@
 
   </section>
 
-  <section class="" ng-if="!vm.error && vm.data.length">
+  <section class="" ng-if="!error && data.length">
 
     <div class="container">
 
@@ -232,9 +195,9 @@
 		</h3>
 
       <div layout="row">
-        <div flex="20" layout-margin layout="column" >
+        <div flex="20" layout-margin layout="column">
           <ul class="list-unstyled">
-            <li ng-repeat="option in vm.chart.options() track by $index" chart-option>
+            <li ng-repeat="option in chart.options() track by $index" chart-option>
               <p class="option-title">
                 <a layout="row" layout-align="end center" class="option-fit" data-ng-show="option.fitToWidth()"><i class="fa fa-expand"></i></a>
               </p>
@@ -269,11 +232,11 @@
         <div flex="80" layout-margin>
           <div class="chart-resize">
 
-            <div ng-if="vm.model.isValid()" id="chart" class="idChart" chart="vm.chart" model="vm.model" data="vm.data" svgcode="vm.svgcode"> </div>
+            <div ng-if="model.isValid()" id="chart" class="idChart" chart="chart" model="model" data="data" svgcode="svgcode"> </div>
 
           </div>
-          <div class="text-muted text-center " ng-show="!vm.model.isValid() ">
-            <h4><span ng-bind-html="vm.model.instruction() "></span></h4>
+          <div class="text-muted text-center " ng-show="!model.isValid() ">
+            <h4><span ng-bind-html="model.instruction() "></span></h4>
           </div>
 
         </div>
@@ -283,20 +246,20 @@
 
   </section>
 
-  <section class="dark" ng-show="vm.model.isValid()" style="padding-bottom:20px">
+  <section class="dark" ng-show="model.isValid()" style="padding-bottom:20px">
 
 
 
     <div layout="row" layout-padding>
       <div flex="20">
         <h3><i class="fa fa-arrow-circle-o-down breath-right "></i>Download</h3>
-        <downloader data="vm.data" model="vm.model"></downloader>
+        <downloader data="data" model="model"></downloader>
       </div>
 
       <div flex="80">
         <h3 id="data "><i class="fa fa-code breath-right "></i>Embed Code</h3>
         <md-input-container class="md-block">
-          <textarea aria-label="embeded code" id="source" readonly class="" rows="5" md-select-on-focus ng-model="vm.svgcode"></textarea>
+          <textarea aria-label="embeded code" id="source" readonly class="" rows="5" md-select-on-focus ng-model="svgcode"></textarea>
         </md-input-container>
         <div layout="row" layout-align="space-between center">
 
